--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,7 +2,9 @@ name: Web3 CI
 
 on:
   push:
-    branches: "master"
+    branches: "main"
+  pull_request:
+    branches: "main"
 
 jobs:
   client-test:
