--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -72,7 +72,10 @@ jobs:
 
       - name: Install project dependencies 
         working-directory: ./smart_contract
-        run: npm init -y
+        run: |
+            npm init -y
+            npm install --save-dev hardhat
+            npx hardhat compile
         env:
           CI: true
 
