--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -174,9 +174,10 @@ jobs:
     - name: Build and push client Docker image
       working-directory: ./client
       run: |
-        docker build . -t ${{ secrets.DOCKER_USERNAME }}/web3-client
-        echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin 
-        docker push ${{ secrets.DOCKER_USERNAME }}/web3-client   
+        aws ecr get-login-password --region eu-north-1 | docker login --username AWS --password-stdin 376801182676.dkr.ecr.eu-north-1.amazonaws.com
+        docker build -t web3-client .
+        docker tag web3-client:latest 376801182676.dkr.ecr.eu-north-1.amazonaws.com/davidkraslan:latest
+        docker push 376801182676.dkr.ecr.eu-north-1.amazonaws.com/davidkraslan:latest
 
     - name: Run Trivy vulnerability scanner
       uses: aquasecurity/trivy-action@master
