--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -113,7 +113,7 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Install Snyk CLI
-        uses: snyk/actions/setup@v2.0.0
+        uses: snyk/actions/setup@master
         with:
           version: latest
         env:
@@ -136,7 +136,7 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Install Snyk CLI
-        uses: snyk/actions/setup@v2.0.0
+        uses: snyk/actions/setup@master
         with:
           version: latest
         env:
@@ -200,7 +200,7 @@ jobs:
           severity: 'CRITICAL,HIGH'
 
       - name: Install Snyk CLI
-        uses: snyk/actions/setup@v2.0.0
+        uses: snyk/actions/setup@master
         with:
           snyk-token: ${{ secrets.SNYK_TOKEN }}
        
@@ -271,7 +271,7 @@ jobs:
           severity: 'CRITICAL,HIGH'
 
       - name: Install Snyk CLI
-        uses: snyk/actions/setup@v2.0.0
+        uses: snyk/actions/setup@master
         with:
           snyk-token: ${{ secrets.SNYK_TOKEN }}
      
@@ -298,7 +298,7 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Install Snyk CLI
-        uses: snyk/actions/setup@v2.0.0
+        uses: snyk/actions/setup@master
         with:
           version: latest
         env:
