--- a/client/package.json
+++ b/client/package.json
@@ -15,18 +15,19 @@
     "postcss": "^8.3.11",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
-    "react-icons": "^4.3.1",
+    "react-icons": "^4.3.1"
+
+  },
+  "devDependencies": {
+    "@vitejs/plugin-react": "^1.0.0",
+    "tailwindcss": "^2.2.19",
+    "vite": "^2.6.4",
     "eslint": "^8.57.0",
     "eslint-config-airbnb": "^19.0.2",
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.27.1",
     "eslint-plugin-react-hooks": "^4.3.0",
-    "prettier": "^3.3.3",
-  },
-  "devDependencies": {
-    "@vitejs/plugin-react": "^1.0.0",
-    "tailwindcss": "^2.2.19",
-    "vite": "^2.6.4"
+    "prettier": "^3.3.3"
   }
 }
