--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,20 +16,16 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Set up Node.js
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v3
         with:
-          node-version: 12
+          node-version: '12'
 
       - name: Install Node.js dependencies
-        run: | 
-          npm ci
-          npm install eslint
-        working-directory: ./client
+        run: npm ci
 
       - name: Run linters
         uses: wearerequired/lint-action@v2
         with:
-          eslint: true
           prettier: true
 
   client-test:
