CI Pipeline - Fix 8.1

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,6 +29,8 @@ jobs:
         run: |
           npm install
           npm install -D tailwindcss postcss autoprefixer
+          npm install eslint
+          npm install prettier
         env:
           CI: true
       
