GH Actions architecture change v3.0

--- a/.github/workflows/ci-lint-client.yml
+++ b/.github/workflows/ci-lint-client.yml
@@ -23,6 +23,7 @@ jobs:
           node-version: 18
 
       - name: Install Node.js dependencies
+        working-directory: ./client
         run: npm ci
 
       - name: Run linters
