--- a/.github/workflows/ci-lint-client.yml
+++ b/.github/workflows/ci-lint-client.yml
@@ -27,6 +27,7 @@ jobs:
         run: npm ci
 
       - name: Run linters
+        working-directory: ./client
         uses: wearerequired/lint-action@v2
         with:
           eslint: true
