--- a/.github/workflows/ci-lint-client.yml
+++ b/.github/workflows/ci-lint-client.yml
@@ -21,11 +21,12 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Set up Node.js
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v4
         with:
           node-version: 18
 
       - name: Install Node.js dependencies
+        working-directory: ./client
         run: npm ci
 
       - name: Run linters
