--- a/client/package.json
+++ b/client/package.json
@@ -4,7 +4,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "serve": "vite preview"
+    "serve": "vite preview",
+    "lint" : "eslint ."
   },
   "dependencies": {
     "@tailwindcss/forms": "^0.3.4",
