--- a/.github/workflows/ci-pipeline-client.yml
+++ b/.github/workflows/ci-pipeline-client.yml
@@ -27,12 +27,18 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Run ES Lint
-        run: npm run lint
+      - name: Run linters
+        uses: wearerequired/lint-action@v2
+        with:
+          eslint: true
+          prettier: true
 
   build:
     name: Build Application
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./client
     needs: lint
     steps:
       - name: Checkout Code
