--- a/.github/workflows/ci-pipeline-client.yml
+++ b/.github/workflows/ci-pipeline-client.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Run linters
+      - name: Run ES Lint and Prettier
         uses: wearerequired/lint-action@v2
         with:
           eslint: true
