--- a/.github/workflows/ci-pipeline-client.yml
+++ b/.github/workflows/ci-pipeline-client.yml
@@ -27,11 +27,12 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Run ES Lint and Prettier
-        uses: wearerequired/lint-action@v2
-        with:
-          eslint: true
-          prettier: true
+      - name: Run Super Linter
+        uses: github/super-linter@v5
+        env:
+          VALIDATE_ALL_CODEBASE: false
+          VALIDATE_JS: true
+          GITHUB_TOKEN: ${{ secrets.PAT_GITHUB }}
 
   build:
     name: Build Application
