Super Linter settings changed

--- a/.github/workflows/ci-pipeline-client.yml
+++ b/.github/workflows/ci-pipeline-client.yml
@@ -32,6 +32,11 @@ jobs:
         env:
           VALIDATE_ALL_CODEBASE: true
           VALIDATE_JS: true
+          SAVE_SUPER_LINTER_OUTPUT: true
+          DISABLE_ERRORS: true ##Dont use in production environment!!!!!
+          SUPER_LINTER_OUTPUT_DIRECTORY_NAME: super-linter-output
+          LOG_FILE: super-linter-report.log
+          LOG_LEVEL: ERROR
           GITHUB_TOKEN: ${{ secrets.PAT_GITHUB }}
 
   build:
